fix: replaced bottom menu behind modals

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1761,7 +1761,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  z-index: 1100;
+  z-index: 1000;
   padding: 10px 20px 0 20px;
   box-shadow: 0px 0px 20px 0px rgba(84, 104, 255, 0.05);
 }
